--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -1,10 +1,19 @@
 <style>
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
   a:-webkit-any-link {
     color: black;
     text-decoration: none;
   }
 
   .header-container {
+    padding: 2rem;
+  }
+
+  .header-center {
     width: 100%;
     position: relative;
   }
@@ -24,7 +33,8 @@
   }
 
   .main-menu {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .main-menu ul {
@@ -58,15 +68,19 @@
 
 <header>
   <div class="header-container">
-    <div class="logo-container">
-      <a href=""><img src="https://cdn.shopify.com/s/files/1/0592/5355/5293/files/hoome_wordmark.png?v=1659692497"></a>
+    <div class="header-center">
+      <div class="logo-container">
+        <a href=""
+          ><img src="https://cdn.shopify.com/s/files/1/0592/5355/5293/files/hoome_wordmark.png?v=1659692497"
+        ></a>
+      </div>
+      <nav class="main-menu">
+        <ul>
+          {% for link in linklists['main-menu'].links -%}
+            <li>{{ link.title | link_to: link.url }}</li>
+          {%- endfor %}
+        </ul>
+      </nav>
     </div>
-    <nav class="main-menu">
-      <ul>
-        {% for link in linklists['main-menu'].links -%}
-          <li>{{ link.title | link_to: link.url }}</li>
-        {%- endfor %}
-      </ul>
-    </nav>
   </div>
 </header>
