cart ocon padding

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -69,7 +69,7 @@
     height: 1.5rem;
     display: inline-block;
     vertical-align: middle;
-    padding-left: 1rem;
+    padding: 0 1rem;
   }
 </style>
 
