--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -71,6 +71,7 @@
     vertical-align: middle;
     padding: 0 1rem;
     margin-top: -0.3rem;
+    border: 1px solid blue;
   }
 </style>
 
@@ -89,6 +90,7 @@
           {%- endfor %}
           <a href="{{ routes.cart_url }}" class="cart-icon">
             <svg
+              class="cart-icon"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
