--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -10,7 +10,7 @@
   }
 
   .header-container {
-    padding: 2rem;
+    padding: 2rem 0;
   }
 
   .header-center {
@@ -79,7 +79,7 @@
   <div class="header-container">
     <div class="header-center">
       <div class="logo-container">
-        <a href=""
+        <a href="{{ shop.url }}"
           ><img src="https://cdn.shopify.com/s/files/1/0592/5355/5293/files/hoome_wordmark.png?v=1659692497"
         ></a>
       </div>
