style h0, align image banner to top of page

--- a/assets/base.css
+++ b/assets/base.css
@@ -1,3 +1,8 @@
-body {
-    padding: 0 3.25rem;
+h0 {
+    font-size: 3.5rem;
+}
+
+#shopify-section-template--15382252257373__image-banner {
+    top: -110px;
+    position: relative;
 }
