--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -3,8 +3,8 @@
     margin: 0;
     padding: 0;
   }
-
-  a:-webkit-any-link {
+  
+  .header-container a {
     color: white;
     text-decoration: none;
   }
